fix(reactivity): fix styling issues on mobile
Fix the styling issues on mobile for the CV section styling.

--- a/css/projects.css
+++ b/css/projects.css
@@ -33,4 +33,12 @@
     #intro-screen p {
         width: 90vw;
     }
+
+    #portfolio-website .cv-logo {
+        width: 10vw;
+    }
+
+    #devpost-link {
+        left: 60px;
+    }
 }
